Clean up and documentation

--- a/Grep.Core.Console/Grep.Core.Console.csproj
+++ b/Grep.Core.Console/Grep.Core.Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,10 +6,7 @@
     <RootNamespace>Grep.Core.Console</RootNamespace>
     <AssemblyName>Grep.Core.Console</AssemblyName>
     <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>latest</LangVersion>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
