--- a/Grep.Core.Console/Grep.Core.Console.csproj
+++ b/Grep.Core.Console/Grep.Core.Console.csproj
@@ -8,7 +8,7 @@
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Version>1.1.4-pre</Version>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
